# tagordo

./: .gitignore  README.md  pyproject.toml  requirements.txt  tagordo.py
tagordo/: main.py
