[tool.poetry]
name = "tagordo"
version = "0.1.0"
description = "Tiny python script to check if given checkpoints are up-to-date with a given cron schedule"
authors = ["Mathias O. Myklebust <mathias@oterbust.no>"]
readme = "README.md"
homepage = "https://github.com/mathiazom/tagordo"
repository = "https://github.com/mathiazom/tagordo"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mathiazom/tagordo/issues"

[tool.poetry.scripts]
tagordo = "tagordo.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.3.0"}
croniter = "^1.3.8"


[tool.poetry.group.dev.dependencies]
typer-cli = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
